# automate-doctor-bot

./: add_pdf.py  create_admin.py  fix_freq.py  fix_phone.py  fix_quotes.py  fix_scheduler.py  fix_scheduler2.py  fix_status.py  fix_values.py  meta_appointment_flow.json  patch_doctor.py  pyproject.toml  refactor_patient.py  refactor_patient_agent.py  requirements.txt  scheduler_state.json  schema.sql  test_db.py  test_send.py  whatsapp_accounts_migration.sql
app/: main.py  middleware.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: appointments.py  debug.py  debug_scheduler.py  doctors.py  reports.py  schedules.py  whatsapp.py
app/core/: config.py
app/db/: retry.py
app/schemas/: appointment.py  doctor.py  prescription.py  whatsapp_account.py
app/services/: doctor_service.py  prescription_service.py  schedule_service.py  scheduler_service.py
app/services/chatbot/: doctor_agent.py  patient_agent.py  router.py
app/services/whatsapp/: config_service.py  flow_encryption.py  flow_handler.py  sender.py  webhook.py
frontend/: middleware.ts
frontend/src/app/doctor/: page.tsx
frontend/src/app/invite/: actions.ts
frontend/src/app/login/: page.tsx
frontend/src/components/auth/: LoginForm.tsx
frontend/src/components/layout/: RoleGuard.tsx  admin-layout.tsx  topbar.tsx
frontend/src/components/modals/: AddUserModal.tsx  BookAppointmentModal.tsx
frontend/src/components/ui/: badge.tsx
frontend/src/lib/: api.ts
frontend/src/types/: api.ts
migrations/: add_doctor_whatsapp_number.sql
scripts/: setup_whatsapp_account.py
(+7 files in other folders)
