[project]
name = "doctorbot"
version = "0.1.0"
description = "Healthcare AI Operating System Backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.128.8",
    "uvicorn[standard]==0.39.0",
    "supabase>=2.0.0",
    "redis==7.0.1",
    "python-dotenv==1.2.1",
    "pydantic>=2.0.0",
    "pydantic-settings==2.11.0",
    "email-validator==2.3.0",
    "requests==2.32.5",
    "stripe==15.3.0",
    "razorpay==2.0.1",
    "boto3==1.42.97",
    "google-generativeai",
    "python-multipart==0.0.20",
    "google-genai",
    "apscheduler",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["frontend*"]
